--- a/FA3_Morillo.ipynb
+++ b/FA3_Morillo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ce12863e",
    "metadata": {},
    "outputs": [
@@ -10,98 +10,106 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_36db4_row0_col0, #T_36db4_row0_col1, #T_36db4_row2_col0, #T_36db4_row2_col1, #T_36db4_row4_col0, #T_36db4_row4_col1, #T_36db4_row6_col0, #T_36db4_row6_col1, #T_36db4_row8_col0, #T_36db4_row8_col1, #T_36db4_row10_col0, #T_36db4_row10_col1, #T_36db4_row12_col0, #T_36db4_row12_col1, #T_36db4_row14_col0, #T_36db4_row14_col1, #T_36db4_row16_col0, #T_36db4_row16_col1 {\n",
+       "#T_a5c11_row0_col0, #T_a5c11_row2_col0, #T_a5c11_row4_col0, #T_a5c11_row6_col0, #T_a5c11_row8_col0, #T_a5c11_row10_col0, #T_a5c11_row12_col0, #T_a5c11_row14_col0, #T_a5c11_row16_col0 {\n",
+       "  text-align: left;\n",
        "  background-color: #f2f2f2;\n",
        "}\n",
-       "#T_36db4_row1_col0, #T_36db4_row1_col1, #T_36db4_row3_col0, #T_36db4_row3_col1, #T_36db4_row5_col0, #T_36db4_row5_col1, #T_36db4_row7_col0, #T_36db4_row7_col1, #T_36db4_row9_col0, #T_36db4_row9_col1, #T_36db4_row11_col0, #T_36db4_row11_col1, #T_36db4_row13_col0, #T_36db4_row13_col1, #T_36db4_row15_col0, #T_36db4_row15_col1 {\n",
+       "#T_a5c11_row0_col1, #T_a5c11_row2_col1, #T_a5c11_row4_col1, #T_a5c11_row6_col1, #T_a5c11_row8_col1, #T_a5c11_row10_col1, #T_a5c11_row12_col1, #T_a5c11_row14_col1, #T_a5c11_row16_col1 {\n",
+       "  background-color: #f2f2f2;\n",
+       "}\n",
+       "#T_a5c11_row1_col0, #T_a5c11_row3_col0, #T_a5c11_row5_col0, #T_a5c11_row7_col0, #T_a5c11_row9_col0, #T_a5c11_row11_col0, #T_a5c11_row13_col0, #T_a5c11_row15_col0 {\n",
+       "  text-align: left;\n",
+       "  background-color: #ffffff;\n",
+       "}\n",
+       "#T_a5c11_row1_col1, #T_a5c11_row3_col1, #T_a5c11_row5_col1, #T_a5c11_row7_col1, #T_a5c11_row9_col1, #T_a5c11_row11_col1, #T_a5c11_row13_col1, #T_a5c11_row15_col1 {\n",
        "  background-color: #ffffff;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_36db4\">\n",
+       "<table id=\"T_a5c11\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_36db4_level0_col0\" class=\"col_heading level0 col0\" ></th>\n",
-       "      <th id=\"T_36db4_level0_col1\" class=\"col_heading level0 col1\" >Score</th>\n",
+       "      <th id=\"T_a5c11_level0_col0\" class=\"col_heading level0 col0\" ></th>\n",
+       "      <th id=\"T_a5c11_level0_col1\" class=\"col_heading level0 col1\" >Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row0_col0\" class=\"data row0 col0\" >Valid</td>\n",
-       "      <td id=\"T_36db4_row0_col1\" class=\"data row0 col1\" >60</td>\n",
+       "      <td id=\"T_a5c11_row0_col0\" class=\"data row0 col0\" >Valid</td>\n",
+       "      <td id=\"T_a5c11_row0_col1\" class=\"data row0 col1\" >60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row1_col0\" class=\"data row1 col0\" >Mode<sup>a</sup></td>\n",
-       "      <td id=\"T_36db4_row1_col1\" class=\"data row1 col1\" >28.000</td>\n",
+       "      <td id=\"T_a5c11_row1_col0\" class=\"data row1 col0\" ><div style='display: flex; justify-content: space-between;'><span>Mode</span><span style='text-align: right;'><sup>a</sup></span></div></td>\n",
+       "      <td id=\"T_a5c11_row1_col1\" class=\"data row1 col1\" >28.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row2_col0\" class=\"data row2 col0\" >Median</td>\n",
-       "      <td id=\"T_36db4_row2_col1\" class=\"data row2 col1\" >57.000</td>\n",
+       "      <td id=\"T_a5c11_row2_col0\" class=\"data row2 col0\" >Median</td>\n",
+       "      <td id=\"T_a5c11_row2_col1\" class=\"data row2 col1\" >57.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row3_col0\" class=\"data row3 col0\" >Mean</td>\n",
-       "      <td id=\"T_36db4_row3_col1\" class=\"data row3 col1\" >59.167</td>\n",
+       "      <td id=\"T_a5c11_row3_col0\" class=\"data row3 col0\" >Mean</td>\n",
+       "      <td id=\"T_a5c11_row3_col1\" class=\"data row3 col1\" >59.167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row4_col0\" class=\"data row4 col0\" >Std Deviation</td>\n",
-       "      <td id=\"T_36db4_row4_col1\" class=\"data row4 col1\" >22.211</td>\n",
+       "      <td id=\"T_a5c11_row4_col0\" class=\"data row4 col0\" >Std Deviation</td>\n",
+       "      <td id=\"T_a5c11_row4_col1\" class=\"data row4 col1\" >22.211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row5_col0\" class=\"data row5 col0\" >Variance</td>\n",
-       "      <td id=\"T_36db4_row5_col1\" class=\"data row5 col1\" >493.328</td>\n",
+       "      <td id=\"T_a5c11_row5_col0\" class=\"data row5 col0\" >Variance</td>\n",
+       "      <td id=\"T_a5c11_row5_col1\" class=\"data row5 col1\" >493.328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row6_col0\" class=\"data row6 col0\" >Skewness</td>\n",
-       "      <td id=\"T_36db4_row6_col1\" class=\"data row6 col1\" >0.163</td>\n",
+       "      <td id=\"T_a5c11_row6_col0\" class=\"data row6 col0\" >Skewness</td>\n",
+       "      <td id=\"T_a5c11_row6_col1\" class=\"data row6 col1\" >0.163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row7_col0\" class=\"data row7 col0\" >Std Error of Skewness</td>\n",
-       "      <td id=\"T_36db4_row7_col1\" class=\"data row7 col1\" >0.316</td>\n",
+       "      <td id=\"T_a5c11_row7_col0\" class=\"data row7 col0\" >Std Error of Skewness</td>\n",
+       "      <td id=\"T_a5c11_row7_col1\" class=\"data row7 col1\" >0.316</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row8_col0\" class=\"data row8 col0\" >Kurtosis</td>\n",
-       "      <td id=\"T_36db4_row8_col1\" class=\"data row8 col1\" >-1.241</td>\n",
+       "      <td id=\"T_a5c11_row8_col0\" class=\"data row8 col0\" >Kurtosis</td>\n",
+       "      <td id=\"T_a5c11_row8_col1\" class=\"data row8 col1\" >-1.241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row9_col0\" class=\"data row9 col0\" >Std Error of Kurtosis</td>\n",
-       "      <td id=\"T_36db4_row9_col1\" class=\"data row9 col1\" >0.632</td>\n",
+       "      <td id=\"T_a5c11_row9_col0\" class=\"data row9 col0\" >Std Error of Kurtosis</td>\n",
+       "      <td id=\"T_a5c11_row9_col1\" class=\"data row9 col1\" >0.632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row10_col0\" class=\"data row10 col0\" >Minimum</td>\n",
-       "      <td id=\"T_36db4_row10_col1\" class=\"data row10 col1\" >25.000</td>\n",
+       "      <td id=\"T_a5c11_row10_col0\" class=\"data row10 col0\" >Minimum</td>\n",
+       "      <td id=\"T_a5c11_row10_col1\" class=\"data row10 col1\" >25.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row11_col0\" class=\"data row11 col0\" >Maximum</td>\n",
-       "      <td id=\"T_36db4_row11_col1\" class=\"data row11 col1\" >99.000</td>\n",
+       "      <td id=\"T_a5c11_row11_col0\" class=\"data row11 col0\" >Maximum</td>\n",
+       "      <td id=\"T_a5c11_row11_col1\" class=\"data row11 col1\" >99.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row12_col0\" class=\"data row12 col0\" >25th Percentile (Q1)</td>\n",
-       "      <td id=\"T_36db4_row12_col1\" class=\"data row12 col1\" >37.750</td>\n",
+       "      <td id=\"T_a5c11_row12_col0\" class=\"data row12 col0\" >25th Percentile (Q1)</td>\n",
+       "      <td id=\"T_a5c11_row12_col1\" class=\"data row12 col1\" >37.750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row13_col0\" class=\"data row13 col0\" >50th Percentile (Q2)</td>\n",
-       "      <td id=\"T_36db4_row13_col1\" class=\"data row13 col1\" >57.000</td>\n",
+       "      <td id=\"T_a5c11_row13_col0\" class=\"data row13 col0\" >50th Percentile (Q2)</td>\n",
+       "      <td id=\"T_a5c11_row13_col1\" class=\"data row13 col1\" >57.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row14_col0\" class=\"data row14 col0\" >75th Percentile (Q3)</td>\n",
-       "      <td id=\"T_36db4_row14_col1\" class=\"data row14 col1\" >76.000</td>\n",
+       "      <td id=\"T_a5c11_row14_col0\" class=\"data row14 col0\" >75th Percentile (Q3)</td>\n",
+       "      <td id=\"T_a5c11_row14_col1\" class=\"data row14 col1\" >76.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row15_col0\" class=\"data row15 col0\" >90th Percentile (D9)</td>\n",
-       "      <td id=\"T_36db4_row15_col1\" class=\"data row15 col1\" >89.200</td>\n",
+       "      <td id=\"T_a5c11_row15_col0\" class=\"data row15 col0\" >90th Percentile (D9)</td>\n",
+       "      <td id=\"T_a5c11_row15_col1\" class=\"data row15 col1\" >89.200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_36db4_row16_col0\" class=\"data row16 col0\" >95th Percentile (P95)</td>\n",
-       "      <td id=\"T_36db4_row16_col1\" class=\"data row16 col1\" >94.100</td>\n",
+       "      <td id=\"T_a5c11_row16_col0\" class=\"data row16 col0\" >95th Percentile (P95)</td>\n",
+       "      <td id=\"T_a5c11_row16_col1\" class=\"data row16 col1\" >94.100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<br><small><sup>a</sup> More than one mode exists, only the first is reported.</small>"
+       "<div style='text-align:left;'><small><sup>a</sup> More than one mode exists, only the first is reported.</small></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +120,7 @@
     "from scipy import stats\n",
     "from IPython.display import HTML\n",
     "\n",
+    "# Data sample\n",
     "scores = [88, 45, 53, 86, 33, 86, 85, 30, 89, 53, 41, 96, 56, 38, 62, 71, 51, 86, \n",
     "          68, 29, 28, 47, 33, 37, 25, 36, 33, 94, 73, 46, 42, 34, 79, 72, 88, 99, \n",
     "          82, 62, 57, 42, 28, 55, 67, 62, 60, 96, 61, 57, 75, 93, 34, 75, 53, 32, \n",
@@ -120,8 +129,15 @@
     "mean = f\"{np.mean(scores):.3f}\"\n",
     "median = f\"{np.median(scores):.3f}\"\n",
     "\n",
+    "# Calculate mode and handle different return formats\n",
     "mode_result = stats.mode(scores, keepdims=False)\n",
-    "mode = f\"{mode_result.mode:.3f}\"\n",
+    "mode_value = mode_result.mode if isinstance(mode_result.mode, np.ndarray) else np.array([mode_result.mode])\n",
+    "mode_count = mode_result.count if isinstance(mode_result.count, np.ndarray) else np.array([mode_result.count])\n",
+    "\n",
+    "if mode_count[0] > 1:\n",
+    "    mode = f\"{mode_value[0]:.3f}\"\n",
+    "else:\n",
+    "    mode = f\"{mode_value[0]:.3f}\"\n",
     "\n",
     "std_dev = f\"{np.std(scores, ddof=1):.3f}\"\n",
     "variance = f\"{np.var(scores, ddof=1):.3f}\"\n",
@@ -138,7 +154,7 @@
     "p95 = f\"{np.percentile(scores, 95):.3f}\"\n",
     "\n",
     "descriptive_stats = {\n",
-    "    \"\": [\"Valid\", \"Mode<sup>a</sup>\", \"Median\", \"Mean\", \"Std Deviation\", \"Variance\", \"Skewness\", \"Std Error of Skewness\",\n",
+    "    \"\": [\"Valid\", \"<div style='display: flex; justify-content: space-between;'><span>Mode</span><span style='text-align: right;'><sup>a</sup></span></div>\", \"Median\", \"Mean\", \"Std Deviation\", \"Variance\", \"Skewness\", \"Std Error of Skewness\",\n",
     "         \"Kurtosis\", \"Std Error of Kurtosis\", \"Minimum\", \"Maximum\", \"25th Percentile (Q1)\", \n",
     "         \"50th Percentile (Q2)\", \"75th Percentile (Q3)\", \"90th Percentile (D9)\", \"95th Percentile (P95)\"],\n",
     "    \"Score\": [len(scores), mode, median, mean, std_dev, variance, skewness, std_error_skewness,\n",
@@ -150,9 +166,12 @@
     "def color_alternating_rows(row):\n",
     "    return ['background-color: #f2f2f2' if row.name % 2 == 0 else 'background-color: #ffffff' for _ in row]\n",
     "\n",
-    "styled_df = descriptive_stats_df.style.apply(color_alternating_rows, axis=1).hide(axis='index')\n",
+    "def style_left_column(df):\n",
+    "    return df.style.applymap(lambda x: 'text-align: left;', subset=[''])\n",
     "\n",
-    "note = \"<br><small><sup>a</sup> More than one mode exists, only the first is reported.</small>\"\n",
+    "styled_df = style_left_column(descriptive_stats_df).apply(color_alternating_rows, axis=1).hide(axis='index')\n",
+    "\n",
+    "note = \"<div style='text-align:left;'><small><sup>a</sup> More than one mode exists, only the first is reported.</small></div>\"\n",
     "\n",
     "html = styled_df.to_html(escape=False)\n",
     "html += note\n",
